--- a/temp_polish/body_by_diego.tex
+++ b/temp_polish/body_by_diego.tex
@@ -191,7 +191,7 @@ I can map this scalar theory into the non-barotropic fluid EFT by identifying...
 
 
 %======================================================================
-\section{Adding dark matter}
+\section{Adding dark matter (TBC)}
 %====================================================================
 
 Let us now consider the lagrangian for a two fluid system where the two fluids interact only through gravity 
