--- a/temp_polish/fluid_EFT_summary.tex
+++ b/temp_polish/fluid_EFT_summary.tex
@@ -73,14 +73,15 @@ which makes it manifest that $c_a^2\geq0$ provided no ghosts $\rho+P>0$, the sec
 
 The adiabatic sound speed \eqref{eq:adiabatic_cs_nonadiabatic_pressure} always coincides with the coefficient $c_s^2$ of the gradient term in the quadratic action for phonons, after integrating out the non-dynamical entropy mode $\pi^0$,
 \begin{align}
-    c_s^2\equiv c_a^2\,,
+    c_a^2\equiv c_s^2\,,
 \end{align}
 which shows that absence of ghosts, thermodynamic stability and gradient instabilities are closely related.
-For flat spacetimes this is proved in \eqref{eq:cs_equiv_cb_flat_spacetime} below.\todotag{prove it in curved space}
+This was expected: longitudinal phonons, i.e. sound waves, do propagate with the speed of sound!
+For flat spacetimes this is proved in \eqref{eq:cs_equiv_ca_flat_spacetime} below.\todotag{prove it in curved space}
 
 Finally, in the barotropic case we can still define $y=\partial_\mu\varphi^0u^\mu$, but $F=F(b)$ does not depend on $y$ and the above formulas reduce to
 {\small\begin{align}\label{eq:thermo_variables_barotropic}
-    \rho=-F,\quad p=F-bF_b,\quad w=\frac{bF_b-F}{F},\quad n=b,\quad \mu=F_b,\quad T=y\,\quad s\equiv0,\quad \frac{d p}{d \rho}=c_a^2=\frac{b^2F_{bb}}{bF_b}.
+    \rho=-F,\,\,\, p=F-bF_b,\,\,\, w=\frac{bF_b-F}{F},\,\,\, n=b,\,\,\, \mu=F_b,\,\,\, T=y\,\,\,\, s\equiv0,\,\,\, \frac{d p}{d \rho}=c_a^2=\frac{b^2F_{bb}}{bF_b}.
 \end{align}}
 
 
@@ -196,8 +197,8 @@ Matching the velocity expansion \eqref{eq:expansions_b_y_u} in the fluid EFT to 
 \subsection{Related computations (to be removed at the end)}
 %================================================================================
 
-Dear collaborators, I know you just want to see the results, but I need a safe place to keep my computations for several reasons: they might (often) be wrong, I want to improve or simplify them, we might disagree on the results, they remind me how to do the math the fastest way in case I need to redo them, etc.
-I promise I will keep them hidden here without polutting the main text and will remove them at the end.
+{\color{red}Dear collaborators, I know you just want to see the results, but I need a safe place to keep my computations for several reasons: they might (often) be wrong, I want to improve or simplify them, we might disagree on the results, they remind me how to do the math the fastest way in case I need to redo them, etc.
+I promise I will keep them hidden here without polutting the main text and will remove them at the end.}\todotag{Read me}
 
 
 %-------------------------------------------------------------------------
@@ -239,3 +240,15 @@ As above we get, with analgous possible thermoodynamical rewriting in terms of t
     &=\frac{b^2F_{bb}y^2F_{yy}-(yF_y-byF_{by})(bF_b-byF_{yb})}{\tfrac{1}{by}y^2F_{yy}(yF_y-bF_b)}.
 \end{aligned}\end{align}}
 
+
+%------------------------------------------------------------------------------
+\subsubsection{Energy-momentum tensor of the fluid EFT {\color{red}(insert from other file)}}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\subsubsection{Quadratic expansion of the fluid variables {\color{red}(insert from other file)}}
+%------------------------------------------------------------------------------
+
+%------------------------------------------------------------------------------
+\subsubsection{Quadratic expansion of the action {\color{red}(insert from other file)}}
+%------------------------------------------------------------------------------
