--- a/temp_polish/matching_scalar_field.tex
+++ b/temp_polish/matching_scalar_field.tex
@@ -1,5 +1,5 @@
 %============================================================================
-\section{Matching the quintessence field (in progress)}
+\section{Matching the quintessence field {\color{red}(in progress)}}
 %============================================================================
 
 In the 5-essence case we can express kinetic energy and potential in terms of energy density and pressure. 
