--- a/temp_polish/phonons_comoving_curvature.tex
+++ b/temp_polish/phonons_comoving_curvature.tex
@@ -1,6 +1,6 @@
 %-------------------------------------------------------------------------
 %======================================================================
-\section{Superhorizon conservation of curvature perturbations from phonon EoM (in progress)}
+\section{Superhorizon conservation of curvature perturbations from phonon EoM {\color{red}(in progress)}}
 %======================================================================
 %---------------------------------------------------------------------------
 A distinctive feature of \emph{adiabatic} perturbations is that they are conserved in the superhorizon limit.
