--- a/yan.tex
+++ b/yan.tex
@@ -228,7 +228,7 @@ Very much in the spirit of Ref.~\cite{Hu:1998kj} we would like to be guided by s
 %%%%%%%%%%%%%%%%%% APPENDIX %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \appendix 
-\input{temp_polish/conventions.tex}
+\input{temp_polish/notations_cosmology.tex}
 \newpage
 \input{temp_polish/fluid_EFT_summary.tex}
 
@@ -240,6 +240,9 @@ Very much in the spirit of Ref.~\cite{Hu:1998kj} we would like to be guided by s
 
 \newpage
 \input{temp_polish/matching_scalar_field.tex}
+
+\newpage
+\input{temp_polish/todolist.tex}
 
 
 
