--- a/body_by_diego.tex
+++ b/body_by_diego.tex
@@ -179,6 +179,12 @@ Now we can write the continuity and Euler equation (see appendix).
 
 Since the entropy is conserved along the flow we can write the equation in comoving gauge $(\delta p=0)$ and eliminate the non-propagating entropy fluctuation to get an expression for the sound speed similar to the one in 2.34. {\bf I would like to see the equations for the density constrast with $\Gamma$} {\bf I would like to do the gauging of the fluid with gravity showing that the phonons are identified with the adiabatic curvature mode a' la Weinberg and hence phonon scattering satisfies soft theorems as well as the adibatic curvature mode as it is well known. Don't know if it in this language.}
 
+Essentially we write something like {\bf okkio che la parametrizzazione e' una cazzata tremenda}
+\begin{equation}
+ds^2=-(1+2\Phi)dt^2+2a \partial_iB dt dx^i+ a^2 e^{2\xi} d\vec{x}^2    
+\end{equation}
+Now varying with respect to $\Phi$ gives the constraint on $\delta\rho$ and through that one shoud relate $\xi\sim\nabla\pi$. {\bf do this explicitly!} 
+
 
 \subsection{Scalar fluids}
 Here I will match the scalar fluids to the fluid EFTs developed so far. This will allow us to show in which sense the fluid EFT remains more general.
