--- a/temp_appendix/fluid_EFT_summary.tex
+++ b/temp_appendix/fluid_EFT_summary.tex
@@ -83,7 +83,10 @@ Finally, in the barotropic case we can still define $y=\partial_\mu\varphi^0u^\m
 {\small\begin{align}\label{eq:thermo_variables_barotropic}
     \rho=-F,\,\,\, p=F-bF_b,\,\,\, w=\frac{bF_b-F}{F},\,\,\, n=b,\,\,\, \mu=F_b,\,\,\, T=y\,\,\,\, s\equiv0,\,\,\, \frac{d p}{d \rho}=c_a^2=\frac{b^2F_{bb}}{bF_b}.
 \end{align}}
-
+In this case we can show explicitly that indeed\todotag{Write better this bit}
+\begin{align}
+    c_a^2=c_s^2=\frac{\dot{\bar{p}}}{\dot{\bar{\rho}}}= \frac{d (w\rho)}{d \rho}=\frac{b^2F_{bb}}{bF_b}\,.
+\end{align}
 
 
 %-----------------------------------------------------------------------
@@ -189,7 +192,7 @@ Matching the velocity expansion \eqref{eq:expansions_b_y_u} in the fluid EFT to 
 %\subsection{Quadratic action for phonons}
 %==========================================================================
 %
-\input{temp_polish/quadratic_action}
+\input{temp_appendix/quadratic_action}
 
 
 
