--- a/temp_appendix/fluid_EFT_summary.tex
+++ b/temp_appendix/fluid_EFT_summary.tex
@@ -86,7 +86,8 @@ Finally, in the barotropic case we can still define $y=\partial_\mu\varphi^0u^\m
 In this case, there is only one indepedent thermodynamic variable, which can be any of $b$, $\rho$ etc, and hence no ambiguity in the variables to keep fixed when computing $dp/d\rho$.
 In particular, defining $c_b^2:=\dot{\bar{p}}/\dot{\bar{\rho}}$, we see explicitly that
 \begin{align}
-    c_s^2\overset{\text{shown above}}{=}c_a^2:=\frac{dp}{d\rho}=\frac{\tfrac{dp}{db}\cancel{db}}{\tfrac{d\rho}{db}\cancel{db}}= \frac{b^2F_{bb}}{bF_b}=\frac{\tfrac{dp}{db}\cancel{\tfrac{db}{dt}dt}}{\tfrac{d\rho}{db}\cancel{\tfrac{db}{dt}dt}}=
+    c_s^2\overset{\substack{\text{shown}\\ \text{in general}}}{=}
+c_a^2:=\frac{dp}{d\rho}=\frac{\tfrac{dp}{db}\cancel{db}}{\tfrac{d\rho}{db}\cancel{db}}= \frac{b^2F_{bb}}{bF_b}=\frac{\tfrac{dp}{db}\cancel{\tfrac{db}{dt}dt}}{\tfrac{d\rho}{db}\cancel{\tfrac{db}{dt}dt}}=
     \frac{\dot{\bar{p}}}{\dot{\bar{\rho}}}=:c_b^2= w-\frac{\dot{w}\bar{\rho}}{\dot{\bar{\rho}}}.
 \end{align}
 That is adiabatic sound speed, gradient coefficient and ratio of time variations of pressure to density all coincide $c_s^2=c_a^2=c_b^2$ in the barotropic case.\footnote{In the nonbarotropic case this is false. In fact $\frac{dp}{d\rho}$ is not even well-defined without specifying variables to keep fixed.}
